Added command line option handling.
git-svn-id: https://taverna.googlecode.com/svn/taverna/products/net.sf.taverna.t2.taverna-commandline/trunk@14083 bf327186-88b3-11dd-a302-d386e5130c1c